app-root/progressive-application-sets/layers-01/deployment/01-dev/layer-1-application.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  name: layer-1
  labels:
    app: layer-1
spec:
  replicas: 6
  selector:
    matchLabels:
      app: layer-1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: layer-1
        deployment: layer-1
    spec:
      containers:
        - name: layer-1
          image: 'image-registry.openshift-image-registry.svc:5000/prog-layers-app-01-dev-01/layers:fixed-v1'
          ports:
            - containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: Always
