app-root/progressive-application-sets/layers-01/deployment/01-dev/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pacman
  namespace: prog-layers-app-01-dev-01
  labels:
    app.kubernetes.io/instance: pacman-dev
    app.kubernetes.io/name: pacman
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: pacman-dev
    app.kubernetes.io/name: pacman
    app.openshift.io/runtime: nodejs
