app-root/progressive-application-sets/layers-01/deployment/01-dev/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman-route
  namespace: prog-layers-app-01-dev-01
spec:
  path: /
  to:
    kind: Service
    name: pacman
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
